--- a/freq_analysis.ipynb
+++ b/freq_analysis.ipynb
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
     "    plt.figure()\n",
     "    sns.lineplot(x=\"iter\", y=\"value\", hue=\"file\", data=diff_df[diff_df[\"distance\"]==dist.__name__], markers=True, errorbar='sd')\n",
     "    plt.title(f'{(dist.__name__).replace(\"_\", \" \")} across generations')\n",
-    "    # plt.savefig(f'plots/{dist.__name__}.jpg', dpi=400)\n",
+    "    plt.savefig(f'plots/{dist.__name__}.jpg', dpi=400)\n",
     "    plt.show()"
    ]
   },
